2011-08-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add `migre.me' as a URL shortening serivce.
	(twittering-tinyurl-services-map): add an entry for `migre.me'.

	* twittering-mode.el: Save icons correctly when
	`twittering-icon-storage-limit' is nil. Thanks to HufflepuffBR who
	reported this problem.
	(twittering-save-icon-properties): fix the list representation of
	stored data when `twittering-icon-storage-limit' is nil.

2011-07-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: The hash by newer algorithm introduced in
	OpenSSL 1.0.0 is also generated for each certificate. This is
	required because OpenSSL 1.0.0 and later fails to find an
	appropriate certificate if its name is based on the hash by the
	older algorithm which has been used by OpenSSL before 1.0.0.
	Thanks to Sakuma who reported this problem.
	(twittering-ca-cert-alist): redefined as a constant. And each
	entry has the hash generated by OpenSSL 1.0.0 and later.
	(twittering-delete-ca-cert): delete multiple files for each
	certificate.
	(twittering-ensure-ca-cert): generate two files for each
	certificate, where their names are the hash by the older algorithm
	used by OpenSSL before 1.0.0 and the other hash by the newer
	algorithm used by OpenSSL 1.0.0 and later.

	* twittering-mode.el: Embed a new root CA certificate to follow
	an update of the server.
	(twittering-ca-cert-alist): add a new root CA certificate,
	`GeoTrust Global CA' in order to follow the update of the server
	certificate of `search.twitter.com'.

	* twittering-mode.el: Output embedded certificates as a single
	file instead of a directory including them. This avoids the
	management of multiple hashes for each certificate.
	(twittering-cert-file): new variable replacing
	`twittering-cert-directory'.
	(twittering-cert-directory): removed.
	(twittering-ca-cert-list): new variable replacing
	`twittering-ca-cert-alist'.
	(twittering-ca-cert-alist): removed.