@@ -1,3 +1,9 @@
+2011-08-14  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el: Update the API for a list timeline.
+	(twittering-call-api): use the current API for retrieving a list
+	timeline.
+
 2011-08-13  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: Add `migre.me' as a URL shortening serivce.
